--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,13 +1,29 @@
+body {
+  background-color: lightblue;
+}
+
 .btn {
   width: 315px;
   height: 56px;
   padding: 17px 59px;
   border: none;
   border-radius: 4px;
-  background: #ec2578;
+  background-color: #ec2578;
   color: #fff;
   font-family: "Open Sans", sans-serif;
   font-size: 17px;
   font-weight: 600;
   line-height: 131.023%;
+}
+
+.btn--small {
+  width: unset;
+  height: 35px;
+  font-size: 14px;
+  padding: 7px 20px;
+}
+
+.btn--white {
+  background-color: #fff;
+  color: #ec2578;
 }
