--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -16,10 +16,7 @@
   border-radius: 4px;
   background-color: #fff;
 }
-
-.profile-icon,
-.cart-icon,
-.chat-icon {
+.icon {
   width: 40px;
   height: 40px;
 
