--- a/src/components/Promotion/Promotion.css
+++ b/src/components/Promotion/Promotion.css
@@ -1,12 +1,12 @@
 .card {
   width: 100%;
   height: 150px;
-  padding: 4px 7px 4px 15px;
+  padding: 13px;
   border-radius: 4px;
-  gap: 33px;
   background-color: #ec2578;
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
