--- a/src/components/MenuBar/MenuBar.module.css
+++ b/src/components/MenuBar/MenuBar.module.css
@@ -1,21 +1,22 @@
-.menu-bar {
+.menubar {
   border-radius: 4px;
   background-color: #ec2578;
-  width: 335px;
+  width: 100%;
   height: 60px;
   padding: 10px 20px;
 
   display: flex;
-  gap: 45px;
+  justify-content: space-between;
 }
 
-.home-icon {
+.homeicon {
   width: 40px;
   height: 40px;
   padding: 6px;
   border-radius: 4px;
   background-color: #fff;
 }
+
 .icon {
   width: 40px;
   height: 40px;
