--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 body {
   background-image: url(/background.png);
-  height: 45vh;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-size: 100% 60vh;
+  background-position: top center;
 }
 
 .page-logo {
   width: 97px;
   height: 94px;
   display: block;
-  margin: 45px auto 16px;
+  margin: 38px auto 16px;
 }
 
 .page-title {
@@ -19,12 +18,11 @@ body {
   font-weight: 600;
   color: #fff;
   text-align: center;
-  margin-bottom: 37px;
+  margin-bottom: 50px;
 }
 
 .form-login {
   width: 300px;
-  height: 398px;
   display: block;
   margin: 0 auto;
 }
@@ -35,7 +33,7 @@ body {
   font-weight: 600;
   color: #000;
   text-align: center;
-  margin: 60px 0 10px 0;
+  margin: 30px 0 10px 0;
 }
 
 .register-link {
@@ -46,5 +44,5 @@ body {
   color: #ec2578;
   display: block;
   text-align: center;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
