--- a/src/components/FoodCard/FoodCard.css
+++ b/src/components/FoodCard/FoodCard.css
@@ -2,8 +2,7 @@
   border-radius: 4px;
   background-color: #ffeeda;
   padding: 7px 22px 10px;
-  width: 158px;
-  height: 140px;
+  min-width: 158px;
 
   display: flex;
   flex-direction: column;
